[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/characters/generic_character.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/characters/mobs/generic_mob/generic_mob.gd" type="Script" id=2]
[ext_resource path="res://game/characters/mobs/armored_dummy/armored_dummy.png" type="Texture" id=3]
[ext_resource path="res://game/characters/mobs/generic_mob/mob_healthbar_under.png" type="Texture" id=4]
[ext_resource path="res://game/characters/mobs/generic_mob/mob_healthbar_progress.png" type="Texture" id=5]

[node name="generic_mob" groups=[
"enemies",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
character_name = "Generic Mob"

[node name="sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="knockback_area" parent="." index="1"]
visible = true

[node name="hitbox" parent="." index="2"]
visible = false

[node name="wander_timer" type="Timer" parent="." index="5"]

[node name="attack_timer" type="Timer" parent="." index="6"]

[node name="mob_healthbar" type="TextureProgress" parent="." index="7"]
margin_left = -8.0
margin_top = 9.0
margin_right = 8.0
margin_bottom = 13.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
[connection signal="timeout" from="wander_timer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
